welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: value update is not a member of java.awt.Color
  if (getCouleurSol()=Color.green){
      ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
  recule()
        ^